Closed Bug 540116 Opened 15 years ago Closed 14 years ago

IPDL: In DEBUG builds, a crashed child in ah_crap_handler shouldn't block the parent

Categories

(Core :: IPC, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cjones, Assigned: cjones)

Details

Attachments

(1 file)

Just need to close the magical fd of the socket connected back to the parent.

Might be worthwhile to have this behavior selected with an environment variable, maybe defaulting to "unblock on crash".
For old behavior, |export MOZ_DONT_UNBLOCK_PARENT_ON_CHILD_CRASH=1|.
Assignee: nobody → jones.chris.g
Attachment #421972 - Flags: review?(benjamin)
Strunk & White note: I used "don't unblock" instead of "block" because the parent won't always be blocked on the child when it crashes, f.e. if the child crashed from an async message.  We can only say that the parent won't be unblocked, we can't say that it will be blocked.
re comment 2: cjones++
Attachment #421972 - Flags: review?(benjamin) → review+
Pushed http://hg.mozilla.org/mozilla-central/rev/4c3d6950eb49
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
could this have caused Bug 544735 in regular builds ?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: