Bug 540116: By default, unblock the parent process if a child crashes in a DEBUG build that uses ah_crap_handler(). Set MOZ_DONT_UNBLOCK_PARENT_ON_CHILD_CRASH=1 to restore old behavior. r=bsmedberg